# echpressure2

./: .gitignore  Makefile  README.md  mkdocs.yml  plan.txt  pyproject.toml  requirements-ml.txt  requirements.txt  theory.txt
.devcontainer/: devcontainer.json
adapters/: base.py
conf/: config.yaml
config/: example.yaml
configs/: echo_peaks.default.yml  macro_windows.default.yml  pressure_regression.default.yml
core/: __init__.py  derivative.py  tables.py  uncertainty.py
docs/: README.md  alignment_revision.md  architecture.md  cli_examples.md  config_reference.md  dataset_indexer.md  ostream.md  outputs_reference.md  pipeline.md  pstream.md  troubleshooting.md
echopress/: cli.py
export/: datasets.py  to_numpy.py
tests/: README.md  conftest.py  test_align_window_mode.py  test_align_zero_channel.py  test_alignment_edit.py  test_amplitude_filter.py  test_calibration.py  test_clean_align.py  test_cli_commands.py  test_cli_detect_windows.py  test_cli_smoke_pipeline.py  test_config.py  test_contract_fixture_pack.py  test_derivative.py  test_echo_peaks.py  test_fft_export.py  test_file2pressure_map.py  test_first_peak_transition.py  test_indexer_pstream_csv.py  test_indexer_read_pstream_example.py  test_macro_peak_to_peak_index.py  test_macro_windows.py  test_mapping.py  test_ml_dataset.py  test_ml_evaluate.py  test_ml_train_overrides.py  test_ostream_csv.py  test_ostream_npz.py  test_packaging_imports.py  test_postprocess_peak_windows.py  test_pstream_csv.py  test_pstream_csv_ingest.py  test_pstream_errors.py  test_pstream_timestamp.py  test_rmcpe.py  (+5 more)
(+184 files in other folders)
