[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "echpressure2"
version = "0.0.0"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.11.4",
    "pandas==2.2.2",
    "typer==0.9.0",
    "click==8.1.7",
    "matplotlib==3.8.2",
    "pydantic==2.7.4",
    "pydantic-settings==2.2.1",
]

[project.optional-dependencies]
docs = ["mkdocs"]
dvc = ["dvc[s3]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
